* Reading .omp file and MQTT discovery for Home Assistant based on .omp file contents * Java 25 * Code reformat + Clean up
Signed-off-by: Piotr Sobiech <piotr@sobie.ch>